tests/NormalTests/paczka1/small_fuzzy/67865331.err
Error in line 3: AegCgmYD A179 43,5
Error in line 6: AegCgmYD A137 76,5
Error in line 5: Ng9YPWNb3c S100 35,5
Error in line 10: Ng9YPWNb3c A179 3,7
